nova rota para criar usuario no banco de dados
