# swagger/swagger_output.json
@@ -16,12 +16,35 @@
     }
   ],
   "paths": {
-    "/users/": {
-      "get": {
+    "/usuario/criar": {
+      "post": {
+        "tags": [
+          "usuario"
+        ],
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "nome": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "senha": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
